# ggeodesy

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  SConstruct  configure.ac  geodesyConfig.cmake  install_setup.py  readme.md
.github/workflows/: clang-format-check.yml  cpp-linux-build.yml
add/: utm.hpp
angle_normalization/: build_angle_normalization_tests.sh  readme.md  test_normalize_angle.cc  test_tests.sh
boost/: Makefile.am  Makefile.am.debug  Makefile.am.production  test_geodtest.cpp  test_geodtime.cpp
doc/: doxy.conf  references  userguide.txt
doc/manual/: geodesy.bib  ggeodesy.tex
doc/manual/chapters/: ellipsoidal_geometry.tex
geodpy/: setup.py  test.py
geodpy/geodesy/: crdtrans.py
geodpy/geodesy/ellipsoid/: distance.py
geodpy/geodpy/: crdtrans.py
geodpy/geodpy/ellipsoid/: distance.py  ellipsoid.py
geodpy/geodpy/units/: units.py
geodpy/tests/: context.py  test.py
include/: ellipsoid.hpp  transformations.hpp  units.hpp
include/core/: crd_transformations.hpp  crdtype_warppers.hpp  ellipsoid_core.hpp  geoconst.hpp
script/: great_circle.csv  great_circle_visualize.py
src/: CMakeLists.txt  Makefile.am  Makefile.am.debug  Makefile.am.production  Makefile.in  car2ell.cpp  car2ell.hpp  car2top.cpp  car2top.hpp  cartesian_to_spherical.cpp  crd_transformations.hpp  crdtype_warppers.hpp  ell2car.cpp  ell2car.hpp  ellipsoid.hpp  ellipsoid_core.hpp  geoconst.hpp  geodesy.hpp  geodetic2cartesian.cpp  geodetic_to_lvlh.cpp  great_circle.cpp  great_circle.hpp  karney_direct.cpp  karney_inverse.cpp  meridian_arc.cpp  meridian_arc_length.cpp  meridian_arc_length.hpp  readme.md  spherical_crd.hpp  spherical_to_cartesian.cpp  top2car.cpp  top2dae.cpp  top2daz.cpp  topocentric_matrix.cpp  trnsfdtls.cpp  trnsfdtls.hpp  units.hpp  vincenty.cpp  vincenty.hpp  vincenty_direct.cpp  (+2 more)
test/: Makefile.am  Makefile.am.production  Makefile.in  crd_transform_ex.cpp  testGeodesy  test_angle_normalization.cc  test_ellipsoid.cpp  test_ellipsoidal_to_geocentric_latitude.cpp  test_geodesic_direct.cpp  test_geodesy.cpp  test_geodtest.cpp  test_help.hpp  test_karney.cpp  test_latitudes.cpp  test_meridian_arc.cpp  test_spherical_earth.cpp  test_transformations.cpp  test_units.cpp  test_vincenty.cpp  vincenty_ex.cpp
test/unit/: deg2rad.cpp  normalize_angle.cpp  rad2deg.cpp
test/unit_tests/: CMakeLists.txt  geodetic.cpp  spherical.cpp  type_wrappers.cpp  type_wrappers_cartesian.cpp
